packages/agikit-core/src/Scripting/LogicScriptParser.generated.ts
import { LogicScriptProgram } from './LogicScriptParserTypes';

// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.3.1 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

('use strict');

export interface IFilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface IFileRange {
  start: IFilePosition;
  end: IFilePosition;
}

export interface ILiteralExpectation {
  type: 'literal';
  text: string;
  ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {}

export interface IClassExpectation {
  type: 'class';
  parts: IClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface IAnyExpectation {
  type: 'any';
}

export interface IEndExpectation {
  type: 'end';
}

export interface IOtherExpectation {
  type: 'other';
  description: string;
}

export type Expectation =
  | ILiteralExpectation
  | IClassExpectation
  | IAnyExpectation
  | IEndExpectation
  | IOtherExpectation;

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g, '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g, (ch) => '\\x0' + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => '\\x' + hex(ch));
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g, '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g, (ch) => '\\x0' + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => '\\x' + hex(ch));
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case 'literal':
          return '"' + literalEscape(expectation.text) + '"';
        case 'class':
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + '-' + classEscape(part[1] as string)
              : classEscape(part);
          });

          return '[' + (expectation.inverted ? '^' : '') + escapedParts + ']';
        case 'any':
          return 'any character';
        case 'end':
          return 'end of input';
        case 'other':
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i: number;
      let j: number;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + ' or ' + descriptions[1];

        default:
          return (
            descriptions.slice(0, -1).join(', ') + ', or ' + descriptions[descriptions.length - 1]
          );
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? '"' + literalEscape(found1) + '"' : 'end of input';
    }

    return 'Expected ' + describeExpected(expected) + ' but ' + describeFound(found) + ' found.';
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: IFileRange;
  public name: string;

  constructor(
    message: string,
    expected: Expectation[],
    found: string | null,
    location: IFileRange,
  ) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = 'SyntaxError';

    if (typeof (Error as any).captureStackTrace === 'function') {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

function peg$parse(input: string, options?: IParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED: Readonly<any> = {};

  const peg$startRuleFunctions: { [id: string]: any } = { Program: peg$parseProgram };
  let peg$startRuleFunction: () => any = peg$parseProgram;

  const peg$c0 = peg$anyExpectation();
  const peg$c1 = function (): any {
    return text();
  };
  const peg$c2 = '\n';
  const peg$c3 = peg$literalExpectation('\n', false);
  const peg$c4 = '\r';
  const peg$c5 = peg$literalExpectation('\r', false);
  const peg$c6 = ' ';
  const peg$c7 = peg$literalExpectation(' ', false);
  const peg$c8 = '\t';
  const peg$c9 = peg$literalExpectation('\t', false);
  const peg$c10 = peg$otherExpectation('comment');
  const peg$c11 = '/*';
  const peg$c12 = peg$literalExpectation('/*', false);
  const peg$c13 = '*/';
  const peg$c14 = peg$literalExpectation('*/', false);
  const peg$c15 = function (comment: any): any {
    return {
      type: 'Comment',
      comment: comment.map((parts: any[]) => parts[1]).join(''),
      location: location(),
    };
  };
  const peg$c16 = '//';
  const peg$c17 = peg$literalExpectation('//', false);
  const peg$c18 = function (head: any, tail: any): any {
    return {
      type: 'Identifier',
      name: head + tail.join(''),
      location: location(),
    };
  };
  const peg$c19 = /^[A-Za-z_]/;
  const peg$c20 = peg$classExpectation([['A', 'Z'], ['a', 'z'], '_'], false, false);
  const peg$c21 = /^[A-Za-z0-9_.]/;
  const peg$c22 = peg$classExpectation(
    [['A', 'Z'], ['a', 'z'], ['0', '9'], '_', '.'],
    false,
    false,
  );
  const peg$c23 = 'if';
  const peg$c24 = peg$literalExpectation('if', false);
  const peg$c25 = function (): any {
    return {
      type: 'Keyword',
      keyword: 'if',
      location: location(),
    };
  };
  const peg$c26 = 'else';
  const peg$c27 = peg$literalExpectation('else', false);
  const peg$c28 = function (): any {
    return {
      type: 'Keyword',
      keyword: 'else',
      location: location(),
    };
  };
  const peg$c29 = ':';
  const peg$c30 = peg$literalExpectation(':', false);
  const peg$c31 = function (label: any): any {
    return {
      type: 'Label',
      label: label.name,
      location: location(),
    };
  };
  const peg$c32 = peg$otherExpectation('number');
  const peg$c33 = function (literal: any): any {
    return literal;
  };
  const peg$c34 = /^[0-9]/;
  const peg$c35 = peg$classExpectation([['0', '9']], false, false);
  const peg$c36 = /^[+\-]/;
  const peg$c37 = peg$classExpectation(['+', '-'], false, false);
  const peg$c38 = function (sign: any, digits: any): any {
    return { type: 'Literal', value: parseInt(text(), 10), location: location() };
  };
  const peg$c39 = '0x';
  const peg$c40 = peg$literalExpectation('0x', true);
  const peg$c41 = function (digits: any): any {
    return { type: 'Literal', value: parseInt(digits, 16), location: location() };
  };
  const peg$c42 = /^[0-9a-f]/i;
  const peg$c43 = peg$classExpectation(
    [
      ['0', '9'],
      ['a', 'f'],
    ],
    false,
    true,
  );
  const peg$c44 = peg$otherExpectation('string');
  const peg$c45 = '"';
  const peg$c46 = peg$literalExpectation('"', false);
  const peg$c47 = function (chars: any): any {
    return { type: 'Literal', value: chars.join(''), location: location() };
  };
  const peg$c48 = "'";
  const peg$c49 = peg$literalExpectation("'", false);
  const peg$c50 = function (head: any, tail: any): any {
    return {
      type: 'Literal',
      value: [
        head.value,
        ...tail.map((parts: [{ value: string }, ...string[]]) => parts[0].value),
      ].join(''),
      location: location(),
      stringLocations: [
        head.location,
        ...tail.map((parts: [{ location: any }, ...string[]]) => parts[0].location),
      ],
    };
  };
  const peg$c51 = '\\';
  const peg$c52 = peg$literalExpectation('\\', false);
  const peg$c53 = function (sequence: any): any {
    return sequence;
  };
  const peg$c54 = function (): any {
    return '';
  };
  const peg$c55 = '0';
  const peg$c56 = peg$literalExpectation('0', false);
  const peg$c57 = function (): any {
    return '\0';
  };
  const peg$c58 = 'b';
  const peg$c59 = peg$literalExpectation('b', false);
  const peg$c60 = function (): any {
    return '\b';
  };
  const peg$c61 = 'f';
  const peg$c62 = peg$literalExpectation('f', false);
  const peg$c63 = function (): any {
    return '\f';
  };
  const peg$c64 = 'n';
  const peg$c65 = peg$literalExpectation('n', false);
  const peg$c66 = function (): any {
    return '\n';
  };
  const peg$c67 = 'r';
  const peg$c68 = peg$literalExpectation('r', false);
  const peg$c69 = function (): any {
    return '\r';
  };
  const peg$c70 = 't';
  const peg$c71 = peg$literalExpectation('t', false);
  const peg$c72 = function (): any {
    return '\t';
  };
  const peg$c73 = 'v';
  const peg$c74 = peg$literalExpectation('v', false);
  const peg$c75 = function (): any {
    return '\v';
  };
  const peg$c76 = 'x';
  const peg$c77 = peg$literalExpectation('x', false);
  const peg$c78 = 'u';
  const peg$c79 = peg$literalExpectation('u', false);
  const peg$c80 = function (digits: any): any {
    return String.fromCharCode(parseInt(digits, 16));
  };
  const peg$c81 = '(';
  const peg$c82 = peg$literalExpectation('(', false);
  const peg$c83 = ')';
  const peg$c84 = peg$literalExpectation(')', false);
  const peg$c85 = ';';
  const peg$c86 = peg$literalExpectation(';', false);
  const peg$c87 = function (commandName: any, argumentList: any): any {
    return {
      type: 'CommandCall',
      commandName: commandName.name,
      argumentList: argumentList ?? [],
      location: location(),
      commandNameLocation: commandName.location,
    };
  };
  const peg$c88 = function (first: any, rest: any): any {
    if (first) {
      return [first, ...rest];
    }

    return [];
  };
  const peg$c89 = ',';
  const peg$c90 = peg$literalExpectation(',', false);
  const peg$c91 = function (argument: any): any {
    return argument;
  };
  const peg$c92 = function (testName: any, argumentList: any): any {
    return {
      type: 'TestCall',
      testName: testName.name,
      argumentList: argumentList ?? [],
      location: location(),
      testNameLocation: testName.location,
    };
  };
  const peg$c93 = '<';
  const peg$c94 = peg$literalExpectation('<', false);
  const peg$c95 = '>';
  const peg$c96 = peg$literalExpectation('>', false);
  const peg$c97 = '<=';
  const peg$c98 = peg$literalExpectation('<=', false);
  const peg$c99 = '>=';
  const peg$c100 = peg$literalExpectation('>=', false);
  const peg$c101 = '==';
  const peg$c102 = peg$literalExpectation('==', false);
  const peg$c103 = '!=';
  const peg$c104 = peg$literalExpectation('!=', false);
  const peg$c105 = function (left: any, operator: any, right: any): any {
    return {
      type: 'BooleanBinaryOperation',
      operator,
      left,
      right,
      location: location(),
    };
  };
  const peg$c106 = '&&';
  const peg$c107 = peg$literalExpectation('&&', false);
  const peg$c108 = function (first: any, remaining: any): any {
    return {
      type: 'AndExpression',
      clauses: [first, ...remaining.map((parts: any) => parts[2])],
      location: location(),
    };
  };
  const peg$c109 = '||';
  const peg$c110 = peg$literalExpectation('||', false);
  const peg$c111 = function (first: any, remaining: any): any {
    return {
      type: 'OrExpression',
      clauses: [first, ...remaining.map((parts: any) => parts[2])],
      location: location(),
    };
  };
  const peg$c112 = '!';
  const peg$c113 = peg$literalExpectation('!', false);
  const peg$c114 = function (expression: any): any {
    return {
      type: 'NotExpression',
      expression,
      location: location(),
    };
  };
  const peg$c115 = function (expression: any): any {
    return expression;
  };
  const peg$c116 = '{';
  const peg$c117 = peg$literalExpectation('{', false);
  const peg$c118 = '}';
  const peg$c119 = peg$literalExpectation('}', false);
  const peg$c120 = function (
    ifKeyword: any,
    conditions: any,
    thenStatements: any,
    elseClause: any,
  ): any {
    return {
      type: 'IfStatement',
      conditions,
      thenStatements,
      elseStatements: elseClause?.statements ?? [],
      location: location(),
      ifKeyword,
      elseKeyword: elseClause?.elseKeyword,
    };
  };
  const peg$c121 = function (elseKeyword: any, statements: any): any {
    return { elseKeyword, statements };
  };
  const peg$c122 = '#message';
  const peg$c123 = peg$literalExpectation('#message', false);
  const peg$c124 = function (): any {
    return {
      type: 'DirectiveKeyword',
      keyword: 'message',
      location: location(),
    };
  };
  const peg$c125 = function (keyword: any, number: any, message: any): any {
    return {
      type: 'MessageDirective',
      number,
      message,
      location: location(),
      keyword,
    };
  };
  const peg$c126 = '#include';
  const peg$c127 = peg$literalExpectation('#include', false);
  const peg$c128 = function (): any {
    return {
      type: 'DirectiveKeyword',
      keyword: 'include',
      location: location(),
    };
  };
  const peg$c129 = function (keyword: any, filename: any): any {
    return {
      type: 'IncludeDirective',
      filename,
      location: location(),
      keyword,
    };
  };
  const peg$c130 = '#define';
  const peg$c131 = peg$literalExpectation('#define', false);
  const peg$c132 = function (): any {
    return {
      type: 'DirectiveKeyword',
      keyword: 'define',
      location: location(),
    };
  };
  const peg$c133 = function (keyword: any, identifier: any, value: any): any {
    return {
      type: 'DefineDirective',
      identifier,
      value,
      location: location(),
      keyword,
    };
  };
  const peg$c134 = '++';
  const peg$c135 = peg$literalExpectation('++', false);
  const peg$c136 = '--';
  const peg$c137 = peg$literalExpectation('--', false);
  const peg$c138 = function (identifier: any, operation: any): any {
    return {
      type: 'UnaryOperationStatement',
      identifier,
      operation,
      location: location(),
    };
  };
  const peg$c139 = '=';
  const peg$c140 = peg$literalExpectation('=', false);
  const peg$c141 = function (assignee: any, value: any): any {
    return {
      type: 'ValueAssignmentStatement',
      assignee,
      value,
      location: location(),
    };
  };
  const peg$c142 = '+';
  const peg$c143 = peg$literalExpectation('+', false);
  const peg$c144 = '-';
  const peg$c145 = peg$literalExpectation('-', false);
  const peg$c146 = '*';
  const peg$c147 = peg$literalExpectation('*', false);
  const peg$c148 = '/';
  const peg$c149 = peg$literalExpectation('/', false);
  const peg$c150 = function (assignee: any, assignee2: any, operator: any, value: any): any {
    assignee.name === assignee2.name;
  };
  const peg$c151 = function (assignee: any, assignee2: any, operator: any, value: any): any {
    return {
      type: 'ArithmeticAssignmentStatement',
      operator,
      assignee,
      value,
      location: location(),
    };
  };
  const peg$c152 = function (assignee: any, value: any, operator: any, assignee2: any): any {
    assignee.name === assignee2.name;
  };
  const peg$c153 = function (assignee: any, value: any, operator: any, assignee2: any): any {
    return {
      type: 'ArithmeticAssignmentStatement',
      operator,
      assignee,
      value,
      location: location(),
    };
  };
  const peg$c154 = function (assignee: any, operator: any, value: any): any {
    return {
      type: 'ArithmeticAssignmentStatement',
      operator,
      assignee,
      value,
      location: location(),
    };
  };
  const peg$c155 = function (assigneePointer: any, value: any): any {
    return {
      type: 'LeftIndirectAssignmentStatement',
      assigneePointer,
      value,
      location: location(),
    };
  };
  const peg$c156 = function (assignee: any, valuePointer: any): any {
    return {
      type: 'RightIndirectAssignmentStatement',
      assignee,
      valuePointer,
      location: location(),
    };
  };
  const peg$c157 = function (statements: any): any {
    return statements.map((statement: any) => statement[1]);
  };

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: Expectation[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error('Can\'t start parsing from rule "' + options.startRule + '".');
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): IFileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: IFileRange) {
    location1 =
      location1 !== undefined ? location1 : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1,
    );
  }

  function error(message: string, location1?: IFileRange) {
    location1 =
      location1 !== undefined ? location1 : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
    return { type: 'literal', text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(
    parts: IClassParts,
    inverted: boolean,
    ignoreCase: boolean,
  ): IClassExpectation {
    return { type: 'class', parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): IAnyExpectation {
    return { type: 'any' };
  }

  function peg$endExpectation(): IEndExpectation {
    return { type: 'end' };
  }

  function peg$otherExpectation(description: string): IOtherExpectation {
    return { type: 'other', description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): IFileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) {
      return;
    }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: IFileRange) {
    return new SyntaxError(message, [], '', location1);
  }

  function peg$buildStructuredError(
    expected1: Expectation[],
    found: string | null,
    location1: IFileRange,
  ) {
    return new SyntaxError(SyntaxError.buildMessage(expected1, found), expected1, found, location1);
  }

  function peg$parseProgram(): any {
    let s0;

    s0 = peg$parseStatementList();

    return s0;
  }

  function peg$parseSourceCharacter(): any {
    let s0, s1;

    s0 = peg$currPos;
    if (input.length > peg$currPos) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$c0);
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c1();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseLineTerminator(): any {
    let s0;

    if (input.charCodeAt(peg$currPos) === 10) {
      s0 = peg$c2;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$c3);
      }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 13) {
        s0 = peg$c4;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$c5);
        }
      }
    }

    return s0;
  }

  function peg$parseWhiteSpace(): any {
    let s0;

    if (input.charCodeAt(peg$currPos) === 32) {
      s0 = peg$c6;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$c7);
      }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 9) {
        s0 = peg$c8;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$c9);
        }
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseLineTerminator();
      }
    }

    return s0;
  }

  function peg$parseComment(): any {
    let s0, s1;

    peg$silentFails++;
    s0 = peg$parseMultiLineComment();
    if (s0 === peg$FAILED) {
      s0 = peg$parseSingleLineComment();
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$c10);
      }
    }

    return s0;
  }

  function peg$parseWSC(): any {
    let s0;

    s0 = peg$parseWhiteSpace();
    if (s0 === peg$FAILED) {
      s0 = peg$parseComment();
    }

    return s0;
  }
